test/data/syntax-errors/a-bad-statement.roo
x = 0 # valid
9 - 2 # valid
x : int # bad